--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +8,26 @@
     <title>GitRepoTry</title>
     <link rel="stylesheet" href="app.css">
 </head>
+
 <body>
     <section>
         <article>
             <h1>
-                Git commmands
-            </h1>
+                Git commmands</h1>
+            <ul>Command list:
+                <br><br>
+                <li class="red"> git add . : Lägger till ändringar</li>
+                <li class="orange">git push : laddar upp till git kontot</li>
+                <li class="yellow">git commit -m "kommentar": beskriver de ändringar som gjorts</li>
+                <li class="yellowgreen">git status: status för git</li>
+                <li class="green">git init: skapar en git fil av redan existerande filer</li>
+                <li class="blue">git pull: uppdaterar filen från github</li>
+                <li class="violet">git log: visar historiken för git</li>
+            </ul>
+
         </article>
     </section>
 
 </body>
+
 </html>
